--- a/photoshare/photoshare/PhotoGalleryViewController.xib
+++ b/photoshare/photoshare/PhotoGalleryViewController.xib
@@ -59,14 +59,14 @@
                     </connections>
                 </button>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="cfs-wx-kRA">
-                    <rect key="frame" x="0.0" y="30" width="320" height="340"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="30" width="320" height="284"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="0.0" id="kVh-ZB-HRu">
-                        <size key="itemSize" width="104" height="100"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="2" minimumInteritemSpacing="0.0" id="kVh-ZB-HRu">
+                        <size key="itemSize" width="104" height="85"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                        <inset key="sectionInset" minX="2" minY="10" maxX="2" maxY="10"/>
                     </collectionViewFlowLayout>
                     <cells/>
                     <connections>
