--- a/photoshare/photoshare/HomeViewController.xib
+++ b/photoshare/photoshare/HomeViewController.xib
@@ -94,7 +94,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aEd-2f-6CB">
-                            <rect key="frame" x="233" y="63" width="71" height="100"/>
+                            <rect key="frame" x="233" y="62.999999634562165" width="71" height="100"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                             <state key="normal">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
